# Train_Service_Alert

./: .example.env  .gitignore  LICENSE  README.md  README.template.md  TODO.md  docker-compose.yaml  pyproject.toml  todo.md
.github/workflows/: build.yaml  push.yaml  run.yaml  test.yaml
config/: data_sources.json
config/producer/: data_sources.json
data/kafka/broker1/: bootstrap.checkpoint  meta.properties
data/kafka/broker1/__cluster_metadata-0/: quorum-state
data/kafka/broker2/: bootstrap.checkpoint  meta.properties
data/kafka/broker2/__cluster_metadata-0/: quorum-state
documents/changelogs/: 1.0.0.md
notebooks/: explore.ipynb
notebooks/tmp_gtfs/: calendar_dates.txt  feed_info.txt  routes.txt  stops.txt  trips.txt
scripts/: config.json  postgres_backup.sh  postgres_to_csv.sh
src/: RedisEngine.py  data_sources.json  extract.py  update_GTFS_base.py
src/consumer/: Dockerfile  PostgreEngine.py  consumer.py  requirements.txt
src/dbt/train_service_alert/: dbt_project.yml
src/dbt/train_service_alert/macros/: delay_helper.sql
src/dbt/train_service_alert/models/: sources.yml
src/gtfs-update/: Dockerfile  PostgreEngine.py  gtfs-update.py  requirements.txt
src/gtfs_update/: Dockerfile  PostgreEngine.py  gtfs_update.py
src/postgres/: init.sql
src/producer/: Dockerfile  RedisEngine.py  extract.py  producer.py  requirements.txt
src/redis/: redis_7.2.conf
tests/: test_consumer.py  test_extract.py  test_gtfs_update.py  test_hello.py  test_postgre_engine.py  test_redis_engine.py
(+15 files in other folders)
