[project]
name = "train-service-alert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gtfs-realtime-bindings>=1.0.0",
    "ipykernel>=6.29.5",
    "kafka-python>=2.2.15",
    "pandas>=2.3.0",
    "psycopg[binary]>=3.2.9",
    "redis>=6.2.0",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "gittyleaks>=0.0.31",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q"
